[package]
name = "slack-vfs"
version = "0.1.0"
edition = "2021"
description = "Steganographic Virtual File System using slack space with encryption and erasure coding"
license = "MIT"
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Encoding (RaptorQ)
raptorq = "2"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
sha2 = "0.10"

# File system
walkdir = "2"

# Password input
rpassword = "7"
libc = "0.2.180"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "slack-vfs"
path = "src/main.rs"

[lib]
name = "slack_vfs"
path = "src/lib.rs"
